# GameEngine

./: BoxCollider3D.h  Button.cpp  Button.h  ButtonSystem.cpp  ButtonSystem.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  CameraSystem.cpp  CameraSystem.h  Canvas.cpp  Canvas.h  CanvasSystem.cpp  CanvasSystem.h  CompSystemInterfaces.h  CompSystemsCore.h  DirectX_Renderer.h  EngineCore.cpp  EngineCore.h  FontManager.cpp  FontManager.h  Image.cpp  Image.h  ImageSystem.cpp  ImageSystem.h  IndexBuffer.h  IndirectBuffer.h  InputHandler.cpp  InputHandler.h  MaterialManager.cpp  MaterialManager.h  MeshComponent.h  MeshComponentSystem.cpp  MeshComponentSystem.h  MeshManager.cpp  MeshManager.h  MeshRenderManager.cpp  MeshRenderManager.h  (+88 more)
Libraries/include/glad/: glad.h
Libraries/lib/: freetype.lib  glfw3.lib
Modules/Core/include/Core/: EngineCore.h
Modules/Core/src/: EngineCore.cpp
Modules/CustomScripts/include/CustomScripts/: PlayerController.h
Modules/CustomScripts/src/: PlayerController.cpp
Modules/Editor/include/Editor/: Editor.h
Modules/Editor/src/: Editor.cpp
Modules/Objects/src/Base/: Object.cpp  ObjectManager.cpp
Modules/Objects/src/ComponentSystems/: CameraManager.cpp  CameraSystem.cpp  MeshComponentSystem.cpp  SpriteComponentSystem.cpp  TransformSystem.cpp
Modules/Objects/src/Components/: Camera.cpp  Transform.cpp
Modules/Objects/src/Scripts/: ScriptManager.cpp
Modules/Project/src/: ModelManager.cpp  ProjectManager.cpp  SceneManager.cpp
Modules/RenderManagers/src/: MeshRenderManager.cpp  SimpleTextRenderer.cpp  SpriteRenderManager.cpp  UI_RenderManager.cpp
Modules/Resources/src/: FontManager.cpp  MaterialManager.cpp  MeshManager.cpp  SpriteManager.cpp  SubMesh.cpp  TextureManager.cpp
Modules/SystemModule/src/: InputHandler.cpp  TimeManager.cpp
Modules/Utility/src/: TinyGLTF_Impl.cpp
Resources/Models/: 2020_ford_shelby_gt500.glb
Resources/Shaders/OpenGL/: Basic Frag.glsl  Basic Text Frag.glsl  Basic Vert.glsl  Mesh Vert.glsl  SDF_Text Frag.glsl  SDF_Text Vert.glsl  Sprite Frag.glsl  Sprite Vert.glsl  UI Frag.glsl  UI Vert.glsl
Resources/Text/SDF_Font_Atlases/: Andyb_SDF.atlas  MnsterGotische_SDF.atlas  cour_SDF.atlas  minecraft_font_SDF.atlas  times_SDF.atlas
Shaders/OpenGL/: Basic Text Frag.glsl  Basic Text Vert.glsl  Mesh Frag.glsl  Mesh Vert.glsl  SDF_Text Frag.glsl  SDF_Text Vert.glsl  UI Vert.glsl
TemporaryProjectsFolder/Project999/: Project999.proj
cmake/: EngineModule.cmake  ExternalLibs.cmake
src/: main.cpp
(+86 files in other folders)
